Cambios en Car y Booking

--- a/booking.html
+++ b/booking.html
@@ -82,9 +82,9 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">VEHICULOS</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="car.html" class="dropdown-item">Listado de carros</a>
-                                <a href="detail.html" class="dropdown-item">Detalles de carros </a>
-                                <a href="booking.html" class="dropdown-item">Resarva tu carro</a>
+                                <a href="car.html" class="dropdown-item">Listado de Vehiculos</a>
+                                <a href="detail.html" class="dropdown-item">Detalles de Vehiculos</a>
+                                <a href="booking.html" class="dropdown-item">Reserva tu vehiculo|</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
@@ -143,7 +143,7 @@
                 </select>
             </div>
             <div class="col-xl-2 col-lg-4 col-md-6 px-2">
-                <button class="btn btn-primary btn-block mb-3" type="submit" style="height: 50px;">Search</button>
+                <button class="btn btn-primary btn-block mb-3" type="submit" style="height: 50px;">Buscar</button>
             </div>
         </div>
     </div>
@@ -152,11 +152,11 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
-        <h1 class="display-3 text-uppercase text-white mb-3">Car Booking</h1>
+        <h1 class="display-3 text-uppercase text-white mb-3">Reserva de Vehiculo</h1>
         <div class="d-inline-flex text-white">
-            <h6 class="text-uppercase m-0"><a class="text-white" href="">Home</a></h6>
+            <h6 class="text-uppercase m-0"><a class="text-white" href="">Inicio</a></h6>
             <h6 class="text-body m-0 px-3">/</h6>
-            <h6 class="text-uppercase text-body m-0">Car Booking</h6>
+            <h6 class="text-uppercase text-body m-0">Reserva</h6>
         </div>
     </div>
     <!-- Page Header Start -->
@@ -171,9 +171,9 @@
                     <img class="img-fluid" src="img/bg-banner.jpg" alt="">
                 </div>
                 <div class="col-lg-6 mb-4">
-                    <h4 class="mb-2">$99.00/Day</h4>
+                    <h4 class="mb-2">$700.000/Por día</h4>
                     <div class="d-flex mb-3">
-                        <h6 class="mr-2">Rating:</h6>
+                        <h6 class="mr-2">Categoria:</h6>
                         <div class="d-flex align-items-center justify-content-center mb-1">
                             <small class="fa fa-star text-primary mr-1"></small>
                             <small class="fa fa-star text-primary mr-1"></small>
@@ -183,7 +183,7 @@
                             <small>(250)</small>
                         </div>
                     </div>
-                    <p>Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur takimata eirmod, dolores takimata consetetur invidunt</p>
+                    <p>Una Alternativa de lujo para tí, que sueñas con llevar a tú mascota de la manera mas comoda, elegante y sobre todo segura, mientras sientes el maravilloso motor de este espectacular auto.</p>
                     <div class="d-flex pt-1">
                         <h6>Share on:</h6>
                         <div class="d-inline-flex">
@@ -198,51 +198,51 @@
             <div class="row mt-n3 mt-lg-0 pb-4">
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-car text-primary mr-2"></i>
-                    <span>Model: 2015</span>
+                    <span>Modelo: 2020</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-cogs text-primary mr-2"></i>
-                    <span>Automatic</span>
+                    <span>Automatico</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-road text-primary mr-2"></i>
-                    <span>20km/liter</span>
+                    <span>20km/litro</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-eye text-primary mr-2"></i>
-                    <span>GPS Navigation</span>
+                    <span>GPS Navegación</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-car text-primary mr-2"></i>
-                    <span>Model: 2015</span>
+                    <span>Modelo: 2020</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-cogs text-primary mr-2"></i>
-                    <span>Automatic</span>
+                    <span>Automatico</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-road text-primary mr-2"></i>
-                    <span>20km/liter</span>
+                    <span>20km/litro</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-eye text-primary mr-2"></i>
-                    <span>GPS Navigation</span>
+                    <span>GPS Navegación</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-car text-primary mr-2"></i>
-                    <span>Model: 2015</span>
+                    <span>Model: 2020</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-cogs text-primary mr-2"></i>
-                    <span>Automatic</span>
+                    <span>Automatico</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-road text-primary mr-2"></i>
-                    <span>20km/liter</span>
+                    <span>20km/litro</span>
                 </div>
                 <div class="col-md-3 col-6 mb-2">
                     <i class="fa fa-eye text-primary mr-2"></i>
-                    <span>GPS Navigation</span>
+                    <span>GPS Navegación</span>
                 </div>
             </div>
         </div>
@@ -255,7 +255,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <h2 class="mb-4">Personal Detail</h2>
+                    <h2 class="mb-4">Datos Personales</h2>
                     <div class="mb-5">
                         <div class="row">
                             <div class="col-6 form-group">
@@ -267,43 +267,43 @@
                         </div>
                         <div class="row">
                             <div class="col-6 form-group">
-                                <input type="email" class="form-control p-4" placeholder="Your Email" required="required">
+                                <input type="email" class="form-control p-4" placeholder="Correo" required="required">
                             </div>
                             <div class="col-6 form-group">
-                                <input type="text" class="form-control p-4" placeholder="Mobile Number" required="required">
+                                <input type="text" class="form-control p-4" placeholder="Celular" required="required">
                             </div>
                         </div>
                     </div>
-                    <h2 class="mb-4">Booking Detail</h2>
+                    <h2 class="mb-4">Detalles de la Busqueda</h2>
                     <div class="mb-5">
                         <div class="row">
                             <div class="col-6 form-group">
                                 <select class="custom-select px-4" style="height: 50px;">
-                                    <option selected>Pickup Location</option>
-                                    <option value="1">Location 1</option>
-                                    <option value="2">Location 2</option>
-                                    <option value="3">Location 3</option>
+                                    <option selected>Lugar Recogida</option>
+                                    <option value="1">Pereira</option>
+                                    <option value="2">Manizales</option>
+                                    <option value="3">Armenia</option>
                                 </select>
                             </div>
                             <div class="col-6 form-group">
                                 <select class="custom-select px-4" style="height: 50px;">
-                                    <option selected>Drop Location</option>
-                                    <option value="1">Location 1</option>
-                                    <option value="2">Location 2</option>
-                                    <option value="3">Location 3</option>
+                                    <option selected>Lugar Entrega</option>
+                                    <option value="1">Bogota</option>
+                                    <option value="2">Medellin</option>
+                                    <option value="3">Cali</option>
                                 </select>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-6 form-group">
                                 <div class="date" id="date2" data-target-input="nearest">
-                                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Pickup Date"
+                                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Fecha Recogida"
                                         data-target="#date2" data-toggle="datetimepicker" />
                                 </div>
                             </div>
                             <div class="col-6 form-group">
                                 <div class="time" id="time2" data-target-input="nearest">
-                                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Pickup Time"
+                                    <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Hora Recogida"
                                         data-target="#time2" data-toggle="datetimepicker" />
                                 </div>
                             </div>
@@ -311,48 +311,48 @@
                         <div class="row">
                             <div class="col-6 form-group">
                                 <select class="custom-select px-4" style="height: 50px;">
-                                    <option selected>Select Adult</option>
-                                    <option value="1">Adult 1</option>
-                                    <option value="2">Adult 2</option>
-                                    <option value="3">Adult 3</option>
+                                    <option selected>Cantidad de Adultos</option>
+                                    <option value="1">Adultos 1 - 2</option>
+                                    <option value="2">Adultos 3 - 4</option>
+                                    <option value="3">Adultos 5 - 6</option>
                                 </select>
                             </div>
                             <div class="col-6 form-group">
                                 <select class="custom-select px-4" style="height: 50px;">
-                                    <option selected>Select Child</option>
-                                    <option value="1">Child 1</option>
-                                    <option value="2">Child 2</option>
-                                    <option value="3">Child 3</option>
+                                    <option selected>Cantidad de Niños</option>
+                                    <option value="1">Niños 1 - 2</option>
+                                    <option value="2">Niños 3 - 4</option>
+                                    <option value="3">Niños 5 - 6</option>
                                 </select>
                             </div>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control py-3 px-4" rows="3" placeholder="Special Request" required="required"></textarea>
+                            <textarea class="form-control py-3 px-4" rows="3" placeholder="Comentario Adicional" required="required"></textarea>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="bg-secondary p-5 mb-5">
-                        <h2 class="text-primary mb-4">Payment</h2>
+                        <h2 class="text-primary mb-4">Pagar</h2>
                         <div class="form-group">
                             <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" name="payment" id="paypal">
-                                <label class="custom-control-label" for="paypal">Paypal</label>
+                                <input type="radio" class="custom-control-input" name="payment" id="Nequi">
+                                <label class="custom-control-label" for="paypal">Nequi</label>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" name="payment" id="directcheck">
-                                <label class="custom-control-label" for="directcheck">Direct Check</label>
+                                <input type="radio" class="custom-control-input" name="payment" id="Daviplata">
+                                <label class="custom-control-label" for="directcheck">Daviplata</label>
                             </div>
                         </div>
                         <div class="form-group mb-4">
                             <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" name="payment" id="banktransfer">
-                                <label class="custom-control-label" for="banktransfer">Bank Transfer</label>
+                                <input type="radio" class="custom-control-input" name="payment" id="Nu Bank">
+                                <label class="custom-control-label" for="banktransfer">Nu Bank</label>
                             </div>
                         </div>
-                        <button class="btn btn-block btn-primary py-3">Reserve Now</button>
+                        <button class="btn btn-block btn-primary py-3">Reservar Ahora</button>
                     </div>
                 </div>
             </div>
