se agregan CRUD

--- a/detail.html
+++ b/detail.html
@@ -85,6 +85,7 @@
                                 <a href="car.html" class="dropdown-item">Car Listing</a>
                                 <a href="detail.html" class="dropdown-item active">Car Detail</a>
                                 <a href="booking.html" class="dropdown-item">Car Booking</a>
+                                <a href="gestionReserva.php" class="dropdown-item">Gestion reserva</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
