--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
                         <a href="index.html" class="nav-item nav-link active">PAGINA PRINCIPAL</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
+
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Vehiculos</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="car.html" class="dropdown-item">Listado de carros</a>
                                 <a href="detail.html" class="dropdown-item">Detalles de carros </a>
-                                <a href="booking.html" class="dropdown-item">Resarva tu carro</a>
+                                <a href="booking.php" class="dropdown-item">Resarva tu carro</a>
+                                <a href="gestionReserva.php" class="dropdown-item">Gestion reserva</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
@@ -160,7 +162,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Royal cars</h4>
                             <h1 class="display-1 text-white mb-md-4">Los mejores coches de alquiler en su ubicación</h1>
-                            <a href="booking.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserva Ahora</a>
+                            <a href="booking.php" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserva Ahora</a>
                         </div>
                     </div>
                 </div>
