--- a/service.html
+++ b/service.html
@@ -85,6 +85,7 @@
                                 <a href="car.html" class="dropdown-item">Listado de carros</a>
                                 <a href="detail.html" class="dropdown-item">Detalles de carros </a>
                                 <a href="booking.html" class="dropdown-item">Resarva tu carro</a>
+                                <a href="gestionReserva.php" class="dropdown-item">Gestion reserva</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
